# aoc-2023

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cxx
src/core/: CMakeLists.txt  io.cxx  io.hxx  numbers.hxx  strings.cxx  strings.hxx
src/day-1/: CMakeLists.txt  README.md  trebuchet.cxx
src/day-10/: CMakeLists.txt  README.md  pipe-maze.cxx
src/day-11/: CMakeLists.txt  README.md  cosmic-expansion.cxx
src/day-12/: CMakeLists.txt  README.md  hot-springs.cxx
src/day-13/: CMakeLists.txt  README.md  point-of-incidence.cxx
src/day-14/: CMakeLists.txt  README.md  parabolic-reflector-dish.cxx
src/day-15/: CMakeLists.txt  README.md  lens-library.cxx
src/day-16/: CMakeLists.txt  README.md  the-floor-will-be-lava.cxx
src/day-17/: CMakeLists.txt  README.md  clumsy-crucible.cxx
src/day-18/: CMakeLists.txt  README.md  lavaduct-lagoon.cxx
src/day-19/: CMakeLists.txt  README.md  aplenty.cxx
src/day-2/: CMakeLists.txt  README.md  cube-conundrum.cxx
src/day-20/: CMakeLists.txt  README.md  connection-mesh.cxx  connection-mesh.hxx  pulse-propagation.cxx
src/day-21/: CMakeLists.txt  README.md  step-counter.cxx
src/day-3/: CMakeLists.txt  README.md  gear-ratios.cxx
src/day-4/: CMakeLists.txt  README.md  scratchcards.cxx
src/day-5/: CMakeLists.txt  README.md  seed-fertilizer.cxx
src/day-6/: CMakeLists.txt  README.md  wait-for-it.cxx
src/day-7/: CMakeLists.txt  README.md  camel-cards.cxx
src/day-8/: CMakeLists.txt  README.md  haunted-wasteland.cxx
src/day-9/: CMakeLists.txt  README.md  (+1 more)
