add_executable(aoc-2023 main.cxx)

add_subdirectory(core)

add_subdirectory(day-1)
add_subdirectory(day-2)
add_subdirectory(day-3)
add_subdirectory(day-4)
add_subdirectory(day-5)
add_subdirectory(day-6)
add_subdirectory(day-7)
add_subdirectory(day-8)
add_subdirectory(day-9)
add_subdirectory(day-10)
add_subdirectory(day-11)
add_subdirectory(day-12)
